--- a/css/adaptive_style.css
+++ b/css/adaptive_style.css
@@ -14,6 +14,8 @@
     }
     .header__img{
         padding: 5px;
+        width: 300px;
+        height: 300px;
     }
     .header__list_surname{
         font-size: 45px;
@@ -78,5 +80,104 @@
     .header__info{
         font-size: 10px;
         padding-right: 10px;
+    }
+    .content-bar__containers{
+        width: 100%;
+    }
+    .skills{
+        width: 200px;
+    }
+    .skills__second{
+        width: 200px;
+    }
+    #progress__html{
+        width: 200px;
+    }
+    #progress__css{
+        width: 200px;
+    }
+    #progress__js{
+        width: 200px;
+    }
+    #progress__react{
+        width: 200px;
+    }
+}
+
+
+@media all and (max-width:700px) {
+    .navbar{
+        width: 100%;
+    }
+    .header{
+        width: 100%;
+    }
+
+    .header__img{
+        width: 220px;
+        height: 220px;
+    }
+
+    .header__right{
+        width: 70%;
+        padding-left: 0px;
+    }
+
+    .header__list_name{
+        font-size: 15px;
+    }
+    .header__list_surname{
+    font-size: 30px;
+    }
+    .header__list_post{
+        font-size: 10px;
+    }
+    h4{
+        font-size: 10px;
+    }
+    .header__hr{
+        width: 100px;
+    }
+    .header__info{
+        font-size: 10px;
+        padding-right: 10px;
+    }
+    .content-bar__containers{
+        width: 100%;
+    }
+    .skills{
+        width: 100px;
+    }
+    .skills__second{
+        width: 100px;
+    }
+    #progress__html{
+        width: 100px;
+    }
+    #progress__css{
+        width: 100px;
+    }
+    #progress__js{
+        width: 100px;
+    }
+    #progress__react{
+        width: 100px;
+    }
+    h2{
+        font-size: 15px;
+    }
+    .content-bar__item{
+        font-size: 15px;
+    }
+    .footer__list{
+        justify-content: space-between;
+        padding: 0%;
+        margin: 0%;
+    }
+    .footer__info{
+        width: 200px;
+    }
+    .footer__item{
+        padding: 5px;
     }
 }
