--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body{
 }
 
 .header__left{
-    width: 30%;
+    width: 35%;
     text-align: end;
     padding-top: 80px;
 }
@@ -187,7 +187,7 @@ h2{
     align-items: center;
     justify-content: space-between;
     border-top: 3px solid rgba(40, 39, 39, 0.827);
-    border-right-width: 1000px;
+    /* border-right-width: 100px; */
 }
 
 .content-bar__item_skills{
@@ -202,7 +202,7 @@ h2{
     background: #333;
     border-radius: 13px;
     height: 20px;
-    width: 300px;
+    width: 250px;
     padding-left: 3px;
     margin-right: 30px;
 }
@@ -220,7 +220,7 @@ h2{
     background: #333;
     border-radius: 13px;
     height: 20px;
-    width: 300px;
+    width: 250px;
     padding: 3px;
 }
 
@@ -237,7 +237,7 @@ h2{
     background: #333;
     border-radius: 13px;
     height: 20px;
-    width: 300px;
+    width: 250px;
     padding: 3px;
 }
 
@@ -254,7 +254,7 @@ h2{
     background: #333;
     border-radius: 13px;
     height: 20px;
-    width: 300px;
+    width: 250px;
     padding: 3px;
 }
 
